src/Components/Notation.css
.notation {
    display: flex;
    height: 100%;
    border: 2px solid var(--border);
    width: 25rem;
    background-color: var(--bg);
    flex-direction: column;
}
.notation-row {
    display: flex;
    text-align: left;
}
.notation-number {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #33312e;
    width: 10%;
    padding: 0.2rem;
    text-align: center;
    border-right: 1px solid #404040;
}
.notation-move {
    width: 40%;
    border: 1px solid var(--border);
    padding: 0.5rem;
    cursor: pointer;
}
.notation-move:hover {
    background-color: #33312e;
}
.notation-move.active {
    background-color: #3381ca;
}

